# SRS

./: .gitignore  .gitmessage  DATABASE_STABILITY_NOTES.md  pyproject.toml  test_comprehensive_api_surface.py  test_edge_cases_blind_spots.py  test_fresh_security_validation.py  test_integration_workflows.py
.github/workflows/: ci.yml
api/: main.py
api/config/: logging.py  settings.py
api/infra/: database.py
api/v1/: healthz.py
api/v1/core/: exceptions.py  idempotency.py  registries.py  security.py
api/v1/infra/jobs/: __init__.py  handlers.py  models.py  registry_init.py  routes.py  schemas.py  service.py  worker.py
api/v1/items/: importers.py  models.py  registry_init.py  routes.py  schemas.py  utils.py  validators.py
api/v1/progress/: DESIGN_DECISIONS.md  routes.py  schemas.py
api/v1/quiz/: __init__.py  graders.py  models.py  registry_init.py  routes.py  schemas.py
api/v1/review/: __init__.py  fsrs.py  models.py  registry_init.py  routes.py  schemas.py
api/v1/search/: __init__.py  embedding_service.py  hybrid_search.py  models.py  registry_init.py  vectorizers.py
cli/: __init__.py  main.py
cli/client/: __init__.py  base.py  endpoints.py
cli/commands/: __init__.py  config.py  items.py  progress.py  quiz.py  review.py
cli/utils/: __init__.py  config_manager.py  formatting.py
migrations/: env.py
migrations/versions/: 0d98090c3c83_add_scheduler_state_and_reviews_tables_.py  12ff5e1154c0_fix_search_triggers_and_functions_.py  22ab0a4a5340_add_item_embeddings_table_for_step_8.py  2865d07e2745_add_search_document_column_and_gin_.py  497f2e114700_add_jobs_table_for_step_11_background_.py  544554655cfb_add_quiz_tables_for_step_5.py  83f4a9eb5d3f_fix_duplicate_search_triggers.py  91ecd4334c59_fix_quiz_user_id_type_inconsistency_.py  e81ea979110f_create_core_entities_orgs_users_items_.py  e993aae79d58_add_tables_for_core_entities.py  fc2036340bcb_add_idempotency_support_table.py
scripts/: demo_step1.py  seed_demo_data.py  step5_demo_complete_loop.py  step5_test_complete_loop.sh
tests/: conftest.py  test_api_integration_comprehensive.py  test_cli.py  test_end_to_end_workflow.py  test_fsrs.py  test_healthz.py  test_import_acceptance.py  test_importers.py  test_items.py  test_progress_endpoints.py  test_quiz_graders.py  test_quiz_integration.py  test_registries.py  test_review_endpoints.py  test_security.py  test_security_data_isolation.py  test_settings.py  test_step10_multi_tenant_auth.py  test_step8_integration.py  test_step9_generation.py
tests/sample_data/: italian_a1.md  math_cloze.md  physics_mcqs.md  programming_short.md
